# Doclinger

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: pyproject.toml  requirements.txt
backend/src/app/: __init__.py  main.py
backend/src/app/api/: routes_artifact.py  routes_extract.py  routes_job.py  routes_storage.py  routes_upload.py
backend/src/app/core/: chunker.py  config.py  docling_runner.py  models.py  run_extract_job.py  storage.py  utils.py
backend/src/app/tests/: test_chunker.py  test_storage.py  test_utils.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: prevent-sleep.ps1
ui/: run.ps1  streamlit_app.py
ui/components/: chunks_view.py  preview.py  progress_stepper.py  settings.py
